--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
@@ -23,5 +23,8 @@
     "node": "^22.11.0",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
